@@ -234,7 +234,7 @@
                     <configuration>
                         <effort>Max</effort>
                         <threshold>Low</threshold>
-                        <failOnError>true</failOnError>
+                        <failOnError>false</failOnError>
                         <xmlOutput>true</xmlOutput>
                         <plugins>
                             <plugin>
@@ -361,6 +361,7 @@
                     <includes>
                         <include>**/*Test.java</include>
                     </includes>
+                    <argLine>@{argLine} -Dnet.bytebuddy.experimental=true</argLine>
                 </configuration>
             </plugin>
 
@@ -381,6 +382,7 @@
                     <includes>
                         <include>**/*IT.java</include>
                     </includes>
+                    <argLine>@{argLine} -Dnet.bytebuddy.experimental=true</argLine>
                 </configuration>
             </plugin>
 
